--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "final",
+  "name": "crochet-hibrido",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,7 +11,6 @@
   "dependencies": {
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@google/genai": "^1.34.0",
     "three": "^0.182.0"
   },
   "devDependencies": {
